--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name": "blue",
+    "publisher": "eddy1470669",
+    "repository": "https://github.com/eddy147/vscode-theme-true-blue",
     "displayName": "blue",
     "description": "A true blue color theme",
-    "version": "0.0.1",
+    "version": "0.0.5",
+    "license": "MIT",
+    "icon": "vscode_theme_true_blue.ico",
     "engines": {
         "vscode": "^1.65.0"
     },
