--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "description": "Color theme with blue background",
     "version": "0.0.7",
     "license": "MIT",
-    "icon": "vscode-theme-blue.png",
+    "icon": "vscode_theme_total_blue.ico",
     "engines": {
         "vscode": "^1.71.0"
     },
